Logtalk/examples/errors/lgtmthdredef.lgt

:- object(lgtmthdredef).

	% Logtalk built-in methods cannot be redefined
	asserta(_).

:- end_object.
